--- a/index.html
+++ b/index.html
@@ -4,30 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layout 2</title>
-    <link rel="stylesheet" href="./global.css">
-    <link rel="stylesheet" href="./styles/layout2.css">
+    <title>Friday Challenge</title>
+    <link rel="stylesheet" href="./styles/home.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
+    </style>
 </head>
 <body>
-    <nav class="nav" >
-        <div class="logo" >
-            <img src="./assets/bit-logo.png" alt="LOGO">
-        </div>
-        <div class="left" >
-            <img src="./assets/home.png" alt="Home">
-            <img src="./assets/calendar.png" alt="Calendar">
-            <img src="./assets/fe.png" alt="FE">
-            <img src="./assets/games.png" alt="Games">
-        </div>
-        <div class="right">
+    <nav class="nav">
+        <img class="logo" src="./assets/logo.svg" alt="bit-logo">
+        <hr>
+        <div class="icon-bg active">
+            <img src="./assets/home.svg" alt="home-icon" class="icon">
             <a href="#">Home</a>
-            <a href="#">Calendar</a>
-            <a href="#">FE</a>
-            <a href="#">Games</a>
         </div>
+        <div class="icon-bg ">
+            <img src="./assets/calendar.svg" alt="calendar-icon" class="icon">
+            <a href="#">Calendar</a>
+        </div>
+        <div class="icon-bg ">
+            <img src="./assets/cubes.svg" alt="cubes-icon" class="icon">
+            <a href="#">FE</a>
+        </div>
+        <div class="icon-bg ">
+            <img src="./assets/play.svg" alt="play-icon" class="icon">
+            <a href="#">Games</a>
+        </div>  
     </nav>
-    <footer class="footer">
-        <span>© Baltic Institute of Technology</span>
+    <section class="container">
+        <div class="row">
+            <div class="col-8 ml-3">
+               <p>Good morning, <br> [Vardas]</p> 
+               <span id='date-time'></span>
+               <script>
+                var dt = new Date();
+                document.getElementById('date-time').innerHTML=dt;
+                </script>
+            </div>
+            
+            <img class="img-pc" src="./assets/workplace-results-professional-report-accounting-during 1.svg" alt="">
+            
+            <div class="col-8 ml-3">
+                <p class="first-solve">"First, solve the problem. Then, write the code." - John Johnson</p>
+            </div>
+        </div>
+    </section>
+    <footer class="row">
+        <span class="col-6 ml-4">&copy; Baltic Institute of Technology</span>
     </footer>
 </body>
 </html>
