--- a/index.html
+++ b/index.html
@@ -31,26 +31,35 @@
             <a href="#">Games</a>
         </div>  
     </nav>
+    <div>
     <section class="container">
         <div class="row">
-            <div class="col-8 ml-3">
-               <p>Good morning, <br> [Vardas]</p> 
+            <div class="col-6 ml-4 col-md-5 ml-md-2">
+               <p class="morning reverse">Good morning, <br> [Vardas]</p> 
                <span id='date-time'></span>
                <script>
                 var dt = new Date();
                 document.getElementById('date-time').innerHTML=dt;
                 </script>
             </div>
-            
-            <img class="img-pc" src="./assets/workplace-results-professional-report-accounting-during 1.svg" alt="">
-            
-            <div class="col-8 ml-3">
-                <p class="first-solve">"First, solve the problem. Then, write the code." - John Johnson</p>
+    </section>    
+    <section>     
+            <div class="row">
+                <img class="col-12 image-home" src="./assets/workplace-results-professional-report-accounting-during 1.svg" alt="">
             </div>
         </div>
     </section>
-    <footer class="row">
-        <span class="col-6 ml-4">&copy; Baltic Institute of Technology</span>
+    <section class="container">
+        <div class="row">     
+            <div class="col-6 ml-4 col-md-7 ml-md-3">
+                <p class="first-solve">"First, solve the problem. Then, write the code." - John Johnson</p>
+            </div>
+        </div>    
+     </section> 
+    <footer class="container">
+        <div row>
+            <span>&copy; Baltic Institute of Technology</span>
+        </div>
     </footer>
 </body>
 </html>
