--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </section>
     <section class="container">
         <div class="row">     
-            <div class="col-6 ml-4 col-md-7 ml-md-3">
+            <div class="col-6 ml-4 col-md-7 ml-md-3 col-lg-6 ml-lg-3">
                 <p class="first-solve">"First, solve the problem. Then, write the code." - John Johnson</p>
             </div>
         </div>    
