--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
             </div>
         </div>    
      </section> 
-    <footer class="container">
-        <div row>
-            <span>&copy; Baltic Institute of Technology</span>
-        </div>
-    </footer>
+    <div class="container">
+        <footer class="row">
+            <span class="col-6 ml-3 footer">&copy; Baltic Institute of Technology</span>
+        </footer>
+    </div>
 </body>
 </html>
